--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
+    <script src="https://kit.fontawesome.com/cc7f7377c1.js" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
