--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <body>
     <app-root></app-root>
   </body>
 </html>
