feat: :sparkles: Add google login + render user info

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
     />
   </head>
   <body>
+        <!-- Social Login -->
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
     <app-root></app-root>
   </body>
 </html>
