feat: :sparkles: Add Paypal payment

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <script src="https://www.paypal.com/sdk/js?client-id=AQ2er_5Q41uDyNbjF10lxhV9v23B_8r8pBMMQ8BordLcfVMazDrxveUZSq4S5qLGoJANMzkPqzaWGLqh"></script>
   </head>
   <body>
-        <!-- Social Login -->
-        <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Social Login -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <app-root></app-root>
   </body>
 </html>
